Fix unit-info element to be consistent on firefox

--- a/css/main.less
+++ b/css/main.less
@@ -890,8 +890,12 @@ progress::-webkit-progress-value { background: #080; }
 
 .unit-info-inner
 {
-  display: block;
+  display: flex;
   position: relative;
+  flex-flow: column;
+  justify-content: flex-end;
+  // height: 68px;
+  height: 4.2em;
 }
 
 .unit-info-name
